@@ -1,7 +1,6 @@
 package com.mercadolibre.be_java_hisp_w25_g15.service.impl;
 
 import com.mercadolibre.be_java_hisp_w25_g15.dto.request.UnfollowDto;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.mercadolibre.be_java_hisp_w25_g15.dto.response.CountFollowersDto;
 import com.mercadolibre.be_java_hisp_w25_g15.dto.response.MessageResponseDto;
 import com.mercadolibre.be_java_hisp_w25_g15.dto.response.UserDto;
@@ -12,24 +11,20 @@ import com.mercadolibre.be_java_hisp_w25_g15.model.Seller;
 import com.mercadolibre.be_java_hisp_w25_g15.model.User;
 import com.mercadolibre.be_java_hisp_w25_g15.repository.IUserRepository;
 import com.mercadolibre.be_java_hisp_w25_g15.service.IUserService;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.mercadolibre.be_java_hisp_w25_g15.utils.ObjectMapperBean;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.Comparator;
 import java.util.Optional;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
+@RequiredArgsConstructor
 public class UserService implements IUserService {
-
-    private final ObjectMapper objectMapper;
-
-    @Autowired
-    private IUserRepository userRepository;
-
-    public UserService(ObjectMapper objectMapper){
-        this.objectMapper = objectMapper;
-    }
+    private final IUserRepository userRepository;
 
     @Override
     public MessageResponseDto unfollowSeller(UnfollowDto unfollowDto) {
@@ -48,10 +43,10 @@ public class UserService implements IUserService {
             throw new NotFoundException("Seller is not followed");
         }
 
-        buyer.get().getFollowed().remove(seller.get());
-        ((Seller) seller.get()).getFollowers().remove(buyer.get());
-        userRepository.unfollowSeller(buyer.get(), seller.get());
-
+        buyer.get().getFollowed().removeIf(followed -> followed.getId() == seller.get().getId());
+        ((Seller) seller.get()).getFollowers().removeIf(follower -> follower.getId() == buyer.get().getId());
+        userRepository.updateFollowedList(buyer.get());
+        userRepository.updateFollowerList(seller.get());
         return new MessageResponseDto("User unfollowed successfully");
     }
 
@@ -74,7 +69,13 @@ public class UserService implements IUserService {
                 .findFirst();
         if(resultSearchUserInFollowersOfSeller.isPresent())
             throw new ConflictException("User already is following");
-        this.userRepository.followSeller(userId, userIdToFollow);
+
+        user.get().getFollowed().add(userToFollow.get());
+        ((Seller) userToFollow.get()).getFollowers().add(user.get());
+
+        this.userRepository.updateFollowerList(userToFollow.get());
+        this.userRepository.updateFollowedList(user.get());
+
         return new MessageResponseDto("Seller followed correctly");
     }
 
@@ -92,7 +93,7 @@ public class UserService implements IUserService {
         );
     }
     @Override
-    public UserDto findAllSellerFollowers(int sellerId){
+    public UserDto findAllSellerFollowers(int sellerId, String order){
         Optional<User> optionalUser = this.userRepository.getUserById(sellerId);
 
         if (optionalUser.isEmpty()) {
@@ -106,28 +107,28 @@ public class UserService implements IUserService {
         } else if (((Seller) user).getFollowers().isEmpty()) {
             throw new NotFoundException("Seller has no followers");
         } else {
-            return new UserDto( user.getId(), user.getUsername(), parseUsersToUserListDto(((Seller) user).getFollowers()), null);
+            List<UserListDto> userListDtos = createUserListDto(((Seller) user).getFollowers());
+            return new UserDto( user.getId(), user.getUsername(), sortUserListDto(userListDtos, order) , null);
         }
     }
 
     @Override
-    public UserDto findAllFollwedByUser(int userId) {
+    public UserDto findAllFollowedByUser(int userId, String order) {
+        Optional<User> user = userRepository.getUserById(userId);
         // Se valida si el usuario existe
-        if(userRepository.getUserById(userId).isEmpty()){
+        if(user.isEmpty()){
             throw  new NotFoundException("User not found");
         }
-        // Se valida si el usuario tiene seguidores
-        User user = userRepository.getFollowedUserById(userId);
-        if(user == null){
+        if(user.get().getFollowed().isEmpty()){
             throw new NotFoundException("User has not followed");
         }else{
             // Se encapsula en un objeto DTO con atributos DTO
-            return new UserDto( user.getId(), user.getUsername(), null, parseUsersToUserListDto(user.getFollowed()));
+            return new UserDto( user.get().getId(), user.get().getUsername(), null, sortUserListDto(createUserListDto(user.get().getFollowed()), order));
         }
     }
 
     @Override
-    public List<UserDto> findAll() {
+    public List<UserListDto> findAll() {
         if(userRepository.getAllUsers().isEmpty()){
             throw new NotFoundException("Usuarios no registrados");
         }
@@ -135,15 +136,29 @@ public class UserService implements IUserService {
     }
 
     // Método para convertir una lista Entidad tipo User a una lista Dto tipo SellerDto
-    private List<UserListDto> parseUsersToUserListDto(List<User> users){
-        return users.stream().map(user-> new UserListDto(user.getId(),user.getUsername()))
+    private List<UserListDto> createUserListDto(List<User> users){
+        return users.stream()
+                .map(user -> new UserListDto(user.getId(),user.getUsername()))
                 .toList();
     }
 
+    private List<UserListDto> sortUserListDto(List<UserListDto> userListDtos, String order){
+        if (order != null) {
+            if (order.equals("name_asc") && userListDtos.size() > 1) {
+                // sort by name asc
+                userListDtos = userListDtos.stream().sorted(Comparator.comparing(UserListDto::getUsername)).collect(Collectors.toList());
+            } else if (order.equals("name_desc") && userListDtos.size() > 1) {
+                // sort by name desc
+                userListDtos = userListDtos.stream().sorted(Comparator.comparing(UserListDto::getUsername).reversed()).collect(Collectors.toList());
+            }
+        }
+        return userListDtos;
+    }
+
     // Método para convertir una lista Entidad tipo User a una lista Dto tipo UserDto
-    private List<UserDto> parseUsersDto(List<User> users){
-        return users.stream().map(users_->objectMapper.convertValue(users_,UserDto.class))
-                .collect(Collectors.toList());
+    private List<UserListDto> parseUsersDto(List<User> users){
+        return users.stream().map(u -> new UserListDto(u.getId(), u.getUsername()))
+                .toList();
     }
 
 }
